clean up discovery list summary laoding and fixing issues with header being hidden

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -10,6 +10,7 @@
 
         <script src="js/lib/vendor/jquery-1.9.1.js"></script>
         <script src="js/lib/vendor/jquery.timeago.js"></script>
+        <script>alert();</script>
 
         <script src="cordova.js"></script>
         <script src="cdv-plugin-fb-connect.js"></script>
