bunch of fixes and new welcome round, plus coach system

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -10,7 +10,6 @@
 
         <script src="js/lib/vendor/jquery-1.9.1.js"></script>
         <script src="js/lib/vendor/jquery.timeago.js"></script>
-        <script>alert();</script>
 
         <script src="cordova.js"></script>
         <script src="cdv-plugin-fb-connect.js"></script>
@@ -98,6 +97,7 @@
         <script src="js/views/stats.js"></script>
         <script src="js/views/start.js"></script>
 		<script src="js/views/welcome.js"></script>
+        <script src="js/views/welcomeCategory.js"></script>
 
 		<script src="js/router.js"></script>
 		<script src="js/lib/vendor/mixpanel.js"></script>
@@ -125,6 +125,7 @@
 	    </div>
 	    <div id="wrapper"></div>
         <div id="fb-root"></div>
+        <div id="coach-overlay"></div>
         <div class="modal-overlay"></div>        
 	</body>
 </html>
