updating UI for new version - button bottom -post questions

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -93,6 +93,7 @@
         <script src="js/views/settings.js"></script>
         <script src="js/views/statusUpdates.js"></script>
         <script src="js/views/suggestedCategories.js"></script>
+        <script src="js/views/searchStatusUpdate.js"></script>
         <script src="js/views/fabricPlayer.js"></script>
         <script src="js/views/stats.js"></script>
         <script src="js/views/start.js"></script>
