adding home Q back in

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -100,6 +100,7 @@
 		<script src="js/views/welcome.js"></script>
         <script src="js/views/welcomeCategory.js"></script>
         <script src="js/views/recommendedPeople.js"></script>
+        <script src="js/views/wantTo.js"></script>
 
 		<script src="js/router.js"></script>
 		<script src="js/lib/vendor/mixpanel.js"></script>
