making scroller on notifications native safari

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -113,7 +113,7 @@
                 if (!window.APP) window.APP = APP;
                 if(Util.isMobile()) {
                     document.addEventListener("deviceready", function() { MobileDevice.onDeviceReady(); }, false);
-                    document.addEventListener("touchmove", function(e) { e.preventDefault(); }, false);
+                    // document.addEventListener("touchmove", function(e) { e.preventDefault(); }, false);
                 } else {
                     window.APP.init();
                 }
