adding digest view and model

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -42,6 +42,7 @@
 		<script src="js/lib/vendor/google.fastbutton.js"></script>
 
         <script src="js/helpers/facebook.js"></script>
+        <script src="js/helpers/react.min.js"></script>
         <script src="js/helpers/facebookActions.js"></script>
         <script src="js/helpers/model.js"></script>
 		<script src="js/helpers/player.js"></script>
@@ -101,6 +102,7 @@
         <script src="js/views/welcomeCategory.js"></script>
         <script src="js/views/recommendedPeople.js"></script>
         <script src="js/views/wantTo.js"></script>
+        <script src="js/views/digest.js"></script>
 
 		<script src="js/router.js"></script>
 		<script src="js/lib/vendor/mixpanel.js"></script>
