--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="fabric.appcache" class="initial">
+<html class="initial">
 	<head>
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
