--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -114,6 +114,8 @@
                 // alert();
 
                 if (!window.APP) window.APP = APP;
+                if (!window.vent) { window.vent = _.extend({}, Backbone.Events); }
+                
                 if(Util.isMobile()) {
                     document.addEventListener("deviceready", function() { MobileDevice.onDeviceReady(); }, false);
                     // document.addEventListener("touchmove", function(e) { e.preventDefault(); }, false);
