--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -91,6 +91,7 @@
         <script src="js/views/whosGoing.js"></script>
         <script src="js/views/register.js"></script>
         <script src="js/views/search.js"></script>
+        <script src="js/views/newSearch.js"></script>
         <script src="js/views/settings.js"></script>
         <script src="js/views/statusUpdates.js"></script>
         <script src="js/views/suggestedCategories.js"></script>
