--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -78,6 +78,7 @@
         <script src="js/views/events.js"></script>
         <script src="js/views/feed.js"></script>
         <script src="js/views/matches.js"></script>
+        <script src="js/views/invite.js"></script>
 		<script src="js/views/header.js"></script>
         <script src="js/views/greeting.js"></script>
         <script src="js/views/home.js"></script>
