Adding scroll to new Home

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -114,7 +114,7 @@
 
         <script>
             function appInit() {
-                // alert();
+                alert();
 
                 if (!window.APP) window.APP = APP;
                 if (!window.vent) { window.vent = _.extend({}, Backbone.Events); }
