--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -7,7 +7,7 @@
 	    <title>Fabric</title>
 
         <link href="css/main.css" rel="stylesheet">
-
+        <link rel="stylesheet" href="css/welcome.css">
         <script src="js/lib/vendor/jquery-1.9.1.js"></script>
         
         <script src="js/lib/vendor/jquery.timeago.js"></script>
@@ -114,7 +114,7 @@
 
         <script>
             function appInit() {
-                // alert();
+                alert();
 
                 if (!window.APP) window.APP = APP;
                 if (!window.vent) { window.vent = _.extend({}, Backbone.Events); }
